--- a/src/pages/MovieDetails/MovieDetails.module.css
+++ b/src/pages/MovieDetails/MovieDetails.module.css
@@ -6,3 +6,15 @@
 .cerror{
     font-size: 30px;
 }
+.buton{ 
+
+padding: 10px 15px;
+border-radius: 2px;
+background-color: #525665;
+
+font-size: 18px;
+font-weight: 700;
+color: #fff;
+
+box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12); }
